Revision history for SquidAnalyzer

6.6 - Sun May  7 16:38:14 CEST 2017

This is a maintenance release that fix one year of issues reported by users.
There is also some additional features, configuration directives all listed
here:

    * Add TopStorage configuration directive to limit the storage of url to
      a certain quantity in data file and sorted by OrderUrl. On huge access
      log it will improve a lot the performances but you will have less
      precision in the top url. Default to 0, all url will be stored.
    
      Here are the performances of SquidAnalayzer on a 1.4 GB access log
      file to parse and compute full reports over one week:
    
      UrlReport | UserReport | Duration
      ----------+------------+---------
          0     |     0      |  2m30s
          0     |     1      |  3m00s
          1     |     1      | 18m15s
          1     |     1      |  9m55s when TopStorage is set to 100

    * Add a cache to network and user aliases for speed improvement. Thanks to
      Louis-Berthier Soulliere for the report.
    * Add TimeStart and TimeStop configuration directives to allow to
      specify a start and stop time. Log line out of this time range
      will not be parsed. The format of the value is HH:MM. These
      directives can be overriden with the -s | --start and -S | --stop
      command line options. Thanks to Louis-Berthier Soulliere for the
      feature request.
    * Add UpdateAlias configuratio directive to apply immediately the changes
      made in aliases files to avoid duplicates. You still have to use
      --rebuild to recreate previous reports with new aliases. Enabling
      this will imply a lost of performances with huges log files.
    * Add UseUrlPort configuration directive to be able to include port number
      into Url statistics. Default is to remove the port information from the
      Url. Thanks to Tobias Wigand for the feature request.