@@ -76,6 +76,18 @@ Makefile.PL Perl script. Here is a sample:
 		MANDIR=/usr/share/man/man3 \
 		DOCDIR=/usr/share/doc/squidanalyzer
 
+Or you can install everything into one directory (e.g.: /opt/squidanalyzer)
+
+	perl Makefile.PL \
+		LOGFILE=/var/log/squid/access.log \
+		BINDIR=/opt/squidanalyzer/bin \
+		CONFDIR=/opt/squidanalyzer/etc \
+		HTMLDIR=/var/www/squidreport \
+		BASEURL=/squidreport \
+		MANDIR=/opt/squidanalyzer/share/man/man3 \
+		DOCDIR=/opt/squidanalyzer/share/doc/squidanalyzer
+		LIB=/opt/squidanalyzer/lib
+
 If you want to build a distro package, there are two other options that you may use. The QUIET option is to tell to Makefile.PL to not show the default post install README. The DESTDIR is to create and install all files in a package build base directory. For example for Fedora RPM, thing may look like that:
 
 	# Make Perl and SendmailAnalyzer distrib files
