@@ -2,6 +2,7 @@
 #
 # Perl frontend to SquidAnalyzer.pm.
 #
+#use lib "PERL5LIB"
 use strict;
 use SquidAnalyzer;
 use Getopt::Long qw(:config no_ignore_case bundling);
